--- a/gb/9/7/31/n2608363.md
+++ b/gb/9/7/31/n2608363.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lbqtsv3191/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lbqtsv3191/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lbqtsv3191/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lbqtsv3191/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lbqtsv3191/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>古代是这样科举考试的？</h2>
 
 <h6></h6>
@@ -10,8 +10,8 @@
 <p>既然皇帝都觉得读书考试好，那么，当然历朝历代的有志之士们都要勇往前冲了。其实，追究中国的科举考试，从隋朝开始，到清末结束，历经一千多年，他是古代选拔人才的一项重要指标。但是在众多人中，要想独占鳌头，可不是一件容易的事，有的人寒窗苦读、鸡鸣未觉，有的人绞尽脑汁、取巧投机样样来，有的毕生进出考场，直到白发苍苍…..</p>
 <p>今天，在夏日炎热的“考季”里，让我们回顾一下古代的科举考试片段，也许能给自己带来不同的启发喔。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310646441734.jpg"><br />
-<img class="size-medium wp-image-7443684" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310646441734.jpg" alt="" width="436" b="600" /></a><img src="https://www.epochtimes.com/images/highRes.jpg" alt="高精度图片" width="14" b="12" border="0" /><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310646441734.jpg"><br />
+<img class="size-medium wp-image-7443684" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310646441734.jpg" alt="" width="436" b="600" /></a><img src="//www.epochtimes.com/images/highRes.jpg" alt="高精度图片" width="14" b="12" border="0" /><br />
 <span class="bn12">明代 / 仇英 / 观榜图 局部</span></div>
 <p><!-- --></p>
 <p><b>活到老 考到老</b></p>
@@ -19,26 +19,26 @@
 <p>还有个叫韩南的人，在考场上奋斗一生，最后终于考上进士了。马上就有富人派媒婆来提亲，韩南笑了笑，写了一首诗送给他：“读尽文书一百担，老来方得一青衫。媒人却问余年纪，四十年前三十三”，也就是说，韩南当时已经是73岁高龄了。</p>
 <p>有些人虽然很有才华，在社会上颇有名望，但屡试不第，年纪又很大了，怎么办呢？这时候，皇帝是可以破格提拔的。明朝的史惇，唐朝的顾非熊，都是这样被提名上来的。明崇祯十三年（1640年），史惇因皇帝的特许，从在职举人直接与进士们一起参加廷试。当然，史惇得到第一名。顾非熊则是因参加考试三十多年，都是落第，还好因皇帝疼惜爱才，提拔其荣登进士。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310646461734.jpg"><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310646461734.jpg"><br />
 <img class="size-medium wp-image-7443685" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310646461734-450x373.jpg" alt="" width="450" b="373" /></a><span class="bn12">古代的考场，如同一条长巷</span></div>
 <p><!-- --></p>
 <p>虽然曹松、韩南考了大半辈子才考上，但这还是属于幸运的。有的人还没等考上，就先进了阴曹地府呢。</p>
 <p><b>还未登第 就上举人塚</b></p>
 <p>古时候的考场叫做“贡院”，贡院设备简陋，都是木搭建筑，所以最怕火灾。当考生进入考场内的考棚之后，贡院里的工作人员就要把门锁上。考生每人分到一间考棚、一支蜡烛和一盆炭火。火灾发生的原因，可能是考生不小心把炭火盆弄翻了，才导致考棚着火。因为考棚怕发生火灾，因此在贡院内有很多装满水的大水缸，就是为了以防万一。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310646451734.jpg"><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310646451734.jpg"><br />
 <img class="size-medium wp-image-7443686" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310646451734.jpg" alt="" width="235" b="306" /></a><span class="bn12">考棚因为用木头搭造容易着火，后来就改成砖造建筑了</span></div>
 <p><!-- --></p>
 <p>但是，贡院发生火灾的次数，实在层出不穷。例如：明朝天顺七年(1463年)，春试的第一天夜晚，就发生了大火，有九十多个考生被活活烧死，这是最惨的一次考场火灾。事后，明英宗送给往生者每人一付棺材，集体埋葬在朝阳门外，人称“举人塚”。可怜这些考生，寒窗苦读还没尝到成功的果实，就先去阎王爷那儿报到了。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310649321734.jpg"><br />
-<img class="size-medium wp-image-7443687" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310649321734-450x327.jpg" alt="" width="450" b="327" /></a><img src="https://www.epochtimes.com/images/highRes.jpg" alt="高精度图片" width="14" b="12" border="0" /><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310649321734.jpg"><br />
+<img class="size-medium wp-image-7443687" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310649321734-450x327.jpg" alt="" width="450" b="327" /></a><img src="//www.epochtimes.com/images/highRes.jpg" alt="高精度图片" width="14" b="12" border="0" /><br />
 <span class="bn12">最大的考场 江南贡院</span></div>
 <p><!-- --></p>
 <p><b>考卷弥封 人人平等</b></p>
 <p>宋代开始有将试卷“弥封”，把考生姓名、籍贯等资料封住，更加确定考试的公平性，但也因此而流传了一些有趣的故事。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310646481734.jpg"><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310646481734.jpg"><br />
 <img class="size-medium wp-image-7443688" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310646481734.jpg" alt="" width="256" b="173" /></a><span class="bn12">考棚模拟图。把上面的桌面卸下，与下面坐的木板拼在一起，就成了考生晚上的睡床。</span></div>
 <p><!-- --></p>
 <p>沈括的《梦溪笔谈》说：北宋时，国子监举办考试，郑獬的成绩被排在第五名。他对此名次相当不满。而依照惯例，考完试之后，凡是被录取的考生都要写信向国子监祭酒表示谢意，郑獬于是提起笔写了一封信给国子监祭酒。他在信中大抱不平，认为自己“李广事业，自谓无双；杜牧文章，只得第五”，并愤怒的将国子监祭酒比喻成劣等驽马、顽石等等。</p>
@@ -49,7 +49,7 @@
 <p><b>毕业状元 刘春霖</b></p>
 <p>1904年是中国最后一次举办科举，那一年的状元是由刘春霖夺魁。但是刘春霖在会试时只排名第17，为何殿试时会一下子变成榜首呢？朝野间引发多种揣测。有人说：在呈给慈禧殿试的10份卷子里，原本会试考第一名的谭延闿（后曾任国民政府主席），因姓氏与戊戌变法中的谭嗣同一样，主考官怕被慈禧怪罪，所以把他的试卷淘汰下来。既然淘汰下来，当然谭延闿就没有得名了。</p>
 <p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;"><a href="https://i.epochtimes.com/assets/uploads/2011/08/907310649331734.jpg"><br />
+<div style="line-height: 90%; text-align: center;"><ahref="https://i.epochtimes.com/assets/uploads/2011/08/907310649331734.jpg"><br />
 <img class="size-medium wp-image-7443690" title="" src="https://i.epochtimes.com/assets/uploads/2011/08/907310649331734.jpg" alt="" width="299" b="352" /></a><span class="bn12">明代 / 仇英/ 观榜图 局部</span></div>
 <p><!-- --></p>
 <p>至于朱汝珍，有人说因为慈禧太后一看这位文笔极佳的人竟是广东人朱汝珍，不觉皱了眉头。因为一些反清之人都来自于广东，例如：维新派的康有为、梁启超等，再看其人名字，“朱”与“诛”同音，还有她最不想看的“珍”字，因为令她想起曾经害死的珍妃…。当然，最后朱汝珍也从榜单中消失了。</p>
@@ -58,40 +58,49 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/9/7/31/n2608363.htm">古代是这样科举考试的？</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11871826.htm">【罗厨寻味】红烧牛尾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/7/12/10/n1937017.md#1">中国的古代钱币(7)</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/2/3/n2415688.md#1">提醒世人行善的“一善牌”</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/3/15/n2463067.md#1">天下“第一憨”用的烟嘴</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/4/5/n2485786.md#1">朱漆太师椅   富贵的象征</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/4/5/n2485802.md#1">小巧可爱的种子篮</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/4/5/n2485803.md#1">奇特的盘骨测量仪</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/5/17/n2529522.md#1">有着历史故事的“平埔族神座”</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/5/17/n2529525.md#1">俏皮可爱的玲珑鼓</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/5/17/n2529526.md#1">一个特别用途的香火篮</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/5/17/n2529542.md#1">达悟族专用的小草药壶</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/9/7/31/n2608363.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/28/n12716805.md#1">【珍言真语】大陆亲友遭株连 王逸战：曙光必现</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/28/n12717063.md#1">【西岸观察】拜登要动最高院 德州酿公投独立</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/23/n12707205.md#1">【爱丽话五千】名留青史！千古明君的十大特点</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12715898.md#1">习近平女儿及姐夫个资泄露 24网民被判刑</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12714261.md#1">45共和党人反对 参议员：弹劾川普案已死</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12715248.md#1">刘乐妍涉贿选3度不到庭 检察官建议发通缉令</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12715248.md#1">刘乐妍涉贿选3度不到庭 检察官建议发通缉令</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12714202.md#1">周润发夫妇恩爱日常曝光 吵架总是发哥认错</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/26/n12712782.md#1">被中国论坛传外遇 周杰伦：要黑也不看看对象</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12716409.md#1">刘德华首开社交媒体账号 已吸引上千万粉丝</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/26/n12713761.md#1">回应飞国外喂鸽子传闻 梁朝伟自称电脑白痴</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12716459.md#1">水果干是比水果更好的药！中医师教你养生吃法</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/26/n12712049.md#1">用餐时别吃下新冠病毒！2关键给食物灭毒</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/26/n12712763.md#1">英国睡眠专家：用一颗网球可停止打鼾</a></li>
+<li><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/21/1/26/n12712014.md#1">【重播】无症状感染者潜藏危机？教你自保法</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lbqtsv3191/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lbqtsv3191/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/7/31/n2608363.htm">古代是这样科举考试的？</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lbqtsv3191/djy/blob/master/gb/9/7/31/n2608363.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lbqtsv3191/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lbqtsv3191/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lbqtsv3191/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lbqtsv3191/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
