--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -41,6 +41,10 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714549.md#1" target="_blank">美国女子死亡37秒 看到自己的身体与亡灵</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1228962172-150x120.jpg" align ="left"></a>美国芝加哥一名女子在产子后心跳停止，成为临床死亡。虽然这段死亡期间仅有37秒，但此时她灵魂出窍，不但看到自己的身体躺在手术房里，还看到了另外空间的亡灵。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 1:43 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703405.md#1" target="_blank">书僮</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703405.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/10/1110080339191454-150x120.jpg" align ="left"></a>书生的告老还乡之路，和出门赶考一样的漫长。似乎，人的出门远走，就是为了白发还乡，叶落归根。这个过程，就是人生吧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 7:57 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12709557.md#1" target="_blank">【涛哥侃封神】第二十九回  斩侯虎文王托孤</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12709557.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1670514613-150x120.jpg" align ="left"></a>崇侯虎杀人不眨眼，万恶具齐；周文王从没见过杀生、首级，一切以谦让为本。即使崇侯虎那么恶，文王也不想杀人……天地间都是善、恶并生的。黑虎和崇侯虎兄弟之间在亲情的这条线上，出现了一善、一恶；周文王和崇侯虎在四大诸侯的平面上，出现了一善、一恶……写书的人在表现：在人的层面什么是真正的善；什么是阴阳、善恶、正反相对应。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 7:32 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712847.md#1" target="_blank">现代诗歌：你的名字叫美利坚</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712847.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Fotolia_76617451_Subscription_L-600x400-150x120.jpg" align ="left"></a>你的名字叫美利坚
+自由美好又独立
+我们生活在你的怀抱里
+你是众神宠爱的孩子......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 5:41 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12686427.md#1" target="_blank">【元曲大家】名闻天下、声震闺阁的郑光祖</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12686427.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Reading-150x120.jpg" align ="left"></a>元曲四大家关、马、白、郑，其中郑光祖是后起之秀，唯一一位元杂剧后期的代表作家。元曲的发展，也有个自盛而衰的过程，总体上来说，元朝初期的作家成就要高于后期，因此四大家的人选也多集中在早期文人。不过郑光祖一点不比前辈逊色，几乎要抢了元人之最关汉卿的地位。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 3:45 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/9/n12677761.md#1" target="_blank">麦立：独占枝头</a><br></h3>今日谁最美  没人说  那一定是我  纵使不一定 自己给肯定......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718336.md#1" target="_blank">台湾古典诗：解倒悬</a><br></h3> 武肺超强祸整年，生灵亿万苦熬煎； 是谁作孽期天谴，早日驱除解倒悬。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 12:11 AM			</td></tr>
@@ -51,6 +55,5 @@
 翻看桌面的老皇历，
 才知道今个冬至啦。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 12:04 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711160.md#1" target="_blank">诗歌：大戏（五首）</a><br></h3>将军唱罢乱登台， 旦丑青衣各挠腮。 剧本天成书有序， 结局奇妙费神猜！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 12:28 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711159.md#1" target="_blank">一七令．武汉的山——武汉封城周年祭</a><br></h3> 山。 蛇望，龟山。 黄陂景，木兰山。 西陵胜地，赏云雾山。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
