--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -7,7 +7,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719212.md#1" target="_blank">组图：冰雪覆盖着尼亚加拉瀑布 宛如仙境</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719212.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/2101282018172124-150x120.jpg" align ="left"></a>“飞流直下三千尺，疑是银河落九天。”这是对堪称世界一绝的尼亚加拉大瀑布（Niagara Falls）的写照 。她位于美、加边界的尼亚加拉河上（Niagara River），尼亚加拉河带着美国四大湖的水，汇流至安大略湖（Ontario Lake）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 1:19 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719670.md#1" target="_blank">非洲蝗虫大军展开另一波攻势 朝中东挺进</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719670.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_292959815-150x120.jpg" align ="left"></a>继去年1月爆发数十年来规模最大的蝗灾之后，非洲东部在本月出现蝗虫大军的另一波攻势。这些数量庞大的沙漠蝗虫除了侵袭东非之外，现在也将战场转移到沙乌地阿拉伯等中东国家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 12:27 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719202.md#1" target="_blank">3个因素决定会否感染新冠 有2个你可以改变</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719202.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1733898416-150x120.jpg" align ="left"></a>面对相同的新冠病毒，每个人受影响的情况却不一样，有些人没有被感染，有些人是无症状感染，有些症状很严重，有的人甚至会死亡。为什么个体差异这么大？是什么原因造成的呢？每个人的先天体质、生活方式和习惯不一样，罹患慢性疾病的状况也不一样，都有可能影响新冠病毒感染的发生及严重程度。新冠病毒的本身无法改变，......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 12:03 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719449.md#1" target="_blank">【直播】大陆现肛拭子检测？新冠检测各种方式比一比</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719449.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1.29.21.2-Health-Live-150x120.jpg" align ="left"></a>南非变种首现美国！两人都无旅行史，南非变种降低疫苗效力怎么办？
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719449.md#1" target="_blank">【直播预告】新冠病毒检测 各种方式利弊比一比</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719449.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1.29.21.2-Health-Live-150x120.jpg" align ="left"></a>南非变种首现美国！两人都无旅行史，南非变种降低疫苗效力怎么办？
 
 世卫为何下调核酸检测标准？新冠检测标准是什么？
 
